<resources>
    <string name="app_name">Womentor</string>
    <string name="title_activity_matches">MatchesActivity</string>
    <string name="email_hint">email</string>
    <string name="password_hint">password</string>
    <string name="login_button">Login</string>
    <string name="registration_display_name">display name</string>
    <string name="password_restriction">Password should be atleast 6 characters long</string>
    <string name="forgot_password">forgot password</string>
    <string name="send_email">Send password reset email</string>
    <string name="location_permission_rationale">Womentor uses your location to show you nearby users you could connect with</string>
</resources>
